--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,8 @@ mysql:
 data:
   image: mysql:latest
   volumes:
-    - /var/lib/mysql 
+    - /var/lib/mysql
+    - ./init.sql:/docker-entrypoint-initdb.d/init.sql
   command: "true"
 
 phpmyadmin:
